cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

project(Hackerrank.CPP CXX)

add_subdirectory(AttendingWorkshops bin/AttendingWorkshops)
add_subdirectory(AttributeParser bin/AttributeParser)
add_subdirectory(BitArray bin/BitArray)
add_subdirectory(DequeSTL bin/DequeSTL)
add_subdirectory(MagicSpells bin/MagicSpells)